# template-python

./: README.md  pyproject.toml  requirements.txt  setup.py
tests/: conftest.py
